Aug 8, 2013: libphonenumber-5.7.1
* Metadata/code changes:
 - Change to the way the metadata is built; now only parts of the proto that are relevant will be
   generated. This means short-code data won't be generated for the normal protos, and fixed-line
   data won't be generated for short-number protos. This cuts the metadata binary size approximately
   in half.

Jul 17, 2013: libphonenumber-5.7
* Code changes:
 - Improve phone number extraction recall.
 - Add support for loading short number metadata.

Jul 16, 2013: libphonenumber-5.6.2
* Metadata changes:
 - Updated alternate formatting data for country calling code(s): 49, 61
 - New metadata for region code(s): TA
 - Updated metadata for region code(s):
   BF, BH, BI, BJ, BR, CR, EH, GA, GE, GN, GU, IL, IN, IR, KH, KW, KZ, MA, MT,
   NA, NE, NL, PH, RO, SH, SO, TK
 - New geocoding data for country calling code(s): 47 (en), 82 (ar)
 - Updated geocoding data for country calling code(s):
   49 (en), 98 (en, fa), 241 (en)

Jul 12, 2013: libphonenumber-5.6.1
* Code changes:
 - Rename all instances of PhoneNumberMetadata to PhoneNumberMetadata for consistency.

Jun 05, 2013: libphonenumber-5.6
* Code changes:
 - Fix for as-you-type-formatting bug affecting countries with no national prefix
   formatting rule, such as China.
* Metadata changes:
 - New alternate formatting data for country calling code(s): 351
 - Updated alternate formatting data for country calling code(s): 49
 - Updated metadata for region code(s):
   AS, BG, BH, BJ, BL, CD, CI, DE, DZ, EH, FJ, GF, GP, IN, KH, KZ, MA, MD, MF,
   ML, MY, NG, PT, PY, TC, TJ, TT

May 08, 2013: libphonenumber-5.5
* Code changes:
 - Changed internal initialization code and made more fields final.
   Note that we now throw an exception if an attempt is made to set the
   metadata more than once (which should only happen during testing).
 - Fix problem with formatNumberForMobileDialing for HU and CL.
* Metadata changes: